<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/profile_image_height_width"
        android:layout_height="@dimen/profile_image_height_width"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:contentDescription="@string/user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_8"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_8"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:text="@string/sign_out"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_12"
            android:layout_toEndOf="@id/delete_data"
            android:layout_marginStart="@dimen/margin_32"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:text="@string/delete_data"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_12"
            android:layout_marginEnd="@dimen/margin_32"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
