<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_news_content_view">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/news_title_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_36"
            android:ems="10"
            android:hint="@string/news_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_layout" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/news_content_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_24"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/news_content_body"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_title_edit_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_48"
            android:layout_marginEnd="@dimen/margin_16"
            android:backgroundTint="@color/colorWhite"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/news_content_edit_text"
            android:layout_marginBottom="@dimen/margin_16"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
