<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/event_image_details_image_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/details_event_image_height"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_layout"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/event_title_details_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:textSize="@dimen/text_size_24"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_image_details_image_view" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_title_details_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/event_description_details_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:paddingStart="@dimen/margin_16"
            android:paddingEnd="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_8"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_description_details_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/event_start_date_details_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_16"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/event_registration_end_date_details_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_24"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_registration_end_date_details_text_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_for_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_out_for_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:text="@string/sign_out"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4"
            android:visibility="gone"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/event_remaining_seats_details_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_for_event" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registration_ended_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_36"
            android:text="@string/registration_has_ended_for_this_event"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
